@@ -174,6 +174,8 @@ Bug Fixes
 * SOLR-16415: asyncId must not have '/'; enforce this.  Enhance ZK cleanup to process directories
   instead of fail.  (David Smiley, Paul McArthur)
 
+* SOLR-16899: CoreAdminOp are statically registered in CoreAdminHandler, preventing more than one Solr instance in the same JVM (Vincent Primault via Alex Deparvu)
+
 Dependency Upgrades
 ---------------------
 
